# openstack-ansible-os_nova

./: .gitreview  CONTRIBUTING.rst  README.rst  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
examples/: playbook.yml
files/: kvm.conf  nova_kernel_permissions.sh  osa-nova.te
handlers/: main.yml
meta/: main.yml
tasks/: main.yml  nova_compute.yml  nova_compute_ironic.yml  nova_compute_key_distribute.yml  nova_compute_kvm.yml  nova_compute_kvm_install.yml  nova_compute_kvm_virsh_net_remove.yml  nova_compute_lxd_install.yml  nova_compute_powervm.yml  nova_compute_powervm_install.yml  nova_compute_wait.yml  nova_console_novnc_install.yml  nova_console_novnc_ssl.yml  nova_console_spice_install.yml  nova_db_post_setup.yml  nova_db_setup.yml  nova_disable_smt.yml  nova_init_common.yml  nova_init_systemd.yml  nova_install.yml  nova_install_apt.yml  nova_install_apt_powervm.yml  nova_install_source.yml  nova_install_yum.yml  nova_mdev_detect.yml  nova_placement.yml  nova_placement_nginx.yml  nova_placement_service_setup.yml  nova_placement_uwsgi.yml  nova_post_install.yml  nova_pre_install.yml  nova_selinux.yml  nova_service_setup.yml  nova_uwsgi.yml  nova_vgpu_detect.yml  nova_virt_detect.yml  service_setup.yml
templates/: lxd-init.sh.j2  nova-key-insert.sh.j2  nova-placement-nginx.conf.j2  nova-placement-uwsgi.ini.j2  nova-systemd-init.j2  nova-systemd-tmpfiles.j2  nova-uwsgi.ini.j2  nova.conf.j2  qemu.conf.j2
tests/: ansible-role-requirements.yml  benchmark-upgrade.yml  inventory  nova-overrides-lxd.yml  nova-overrides.yml  test.yml  (+15 more)
(+45 files in other folders)
